<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="60sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:text="@string/welcome1"
        android:layout_below="@id/welcome"
        android:textSize="30sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome2"
        android:layout_marginTop="-10dp"
        android:layout_below="@id/welcome1"
        android:text="@string/welcome2"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome3"
        android:layout_marginTop="75dp"
        android:layout_below="@id/button2"
        android:text="@string/welcome3"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="200dp"
        android:padding="12dp"
        android:text="@string/button"
        android:textColor="#104773"
        android:textSize="35sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_below="@id/button"
        android:layout_marginStart="120dp"
        android:textColor="#104773"
        android:padding="12dp"
        android:text="@string/button1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@id/button1"
        android:textColor="#104773"
        android:padding="12dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/button2"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        />



</RelativeLayout>