<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".OnDuty_Form_Input">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_name"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="45sp"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/personal"
        android:layout_centerHorizontal="true"
        android:text="@string/button"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:layout_below="@id/app_name"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/department"
        android:text="@string/department"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:layout_below="@id/personal"

        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/departmentSpinner"
        android:layout_below="@id/department"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/departmentSpinner"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enterName"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#5A5555" />

    <EditText
        android:id="@+id/registerNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/registerNumber"
        android:inputType="number"
        android:padding="20dp"
        android:textColorHint="#5A5555" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/year"
        android:text="@string/year"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:layout_below="@id/registerNumber"

        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yearSpinner"
        android:layout_below="@id/year"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />


    <EditText
        android:id="@+id/Reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yearSpinner"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/reason"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#5A5555" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_out"
        android:layout_marginStart="260dp"
        android:text="@string/to"
        android:textSize="30sp"
        android:layout_below="@id/Reason"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_in"
        android:layout_marginStart="30dp"
        android:text="@string/from"
        android:textSize="30sp"
        android:layout_below="@id/Reason"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDate"
        android:hint="@string/Select"
        android:textSize="15sp"
        android:inputType="none"
        android:layout_below="@id/date_in"
        android:onClick="showDatePickerDialog"
        android:layout_marginStart="50dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDate1"
        android:hint="@string/Select"
        android:inputType="none"
        android:onClick="showDatePickerDialog1"
        android:textSize="15sp"
        android:layout_below="@id/date_in"
        android:layout_marginStart="260dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/preview_button"
        android:layout_below="@id/buttonDate"
        android:text="@string/preview_button"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>